window tab complete, appliance tab reworked

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
  <head>
   <meta charset='utf-8'>
   <title>My AngularJS App</title>
+  <!-- LOAD BOOTSTRAP CSS -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
   <link rel='stylesheet' href='css/app.css'/>
  </head>
  <body>
@@ -43,10 +45,10 @@
   </div>
 
   <ul class='menu'>
-   <li><a href='#/appliance'>Appliances</a></li>
-   <li><a href='#/mote'>Motes</a></li>
-   <li><a href='#/measure'>Measures</a></li>
-   <li><a href='#/controlrule'>Control Rules</a></li>
+   <li><a href='#/appliances'>Appliances</a></li>
+   <li><a href='#/motes'>Motes</a></li>
+   <li><a href='#/measures'>Measures</a></li>
+   <li><a href='#/windows'>Windows</a></li>
   </ul>
 
   <div ng-view></div>
